data/derived/fa15/progs/unify/prog1902.ml.out
Characters 76-78:
  | true -> wwhile(f,b')
                     ^^
Error: This expression has type 'a but an expression was expected of type
         'a * bool
       The type variable 'a occurs inside 'a * bool
